Replace default login/registration logic The default templates apply the email as the username. These change give a distinct username for registration and login.

--- a/Northwind 2018/WebApp/Site.Master
+++ b/Northwind 2018/WebApp/Site.Master
@@ -78,6 +78,7 @@
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
+                                <li><asp:LinkButton ID="WebAdminLogin" runat="server" OnClick="WebAdminLogin_Click">Log in as WebMaster</asp:LinkButton></li>
                                 <li><a runat="server" href="~/Account/Register">Register</a></li>
                                 <li><a runat="server" href="~/Account/Login">Log in</a></li>
                             </ul>
